--- a/apps/opik-backend/src/test/resources/config-test.yml
+++ b/apps/opik-backend/src/test/resources/config-test.yml
@@ -402,6 +402,9 @@ serviceToggles:
   # Default: false
   # Description: Whether or not CSV upload feature is enabled for dataset items
   csvUploadEnabled: "false"
+  # Default: true
+  # Description: Whether or not export/download functionality is enabled
+  exportEnabled: "true"
 
 # Trace Thread configuration
 traceThreadConfig:
