--- a/.github/workflows/build_and_push_docker.yaml
+++ b/.github/workflows/build_and_push_docker.yaml
@@ -145,7 +145,7 @@ jobs:
           build-args: |
             OPIK_VERSION=${{ inputs.version }}
             ${{ matrix.image_type == 'comet' && (
-              format('{0}\nSENTRY_ENABLED=true\nSENTRY_DSN={1}', inputs.comet_build_args, secrets.OPIK_FE_SENTRY_DSN)
+              format('{0} SENTRY_ENABLED=true SENTRY_DSN={1}', inputs.comet_build_args, secrets.OPIK_FE_SENTRY_DSN)
             ) || '' }}
           secrets: |
             ${{ matrix.image_type == 'comet' && secrets.OPIK_FE_SENTRY_DSN != '' && format('OPIK_FE_SENTRY_DSN={0}', secrets.OPIK_FE_SENTRY_DSN) || '' }}
