--- a/.github/workflows/build_and_push_docker.yaml
+++ b/.github/workflows/build_and_push_docker.yaml
@@ -146,7 +146,7 @@ jobs:
             OPIK_VERSION=${{ inputs.version }}
             ${{ matrix.image_type == 'comet' && inputs.comet_build_args }}
             ${{ matrix.image_type == 'comet' && 'SENTRY_ENABLED=true' }}
-            ${{ matrix.image_type == 'comet' && secrets.OPIK_FE_SENTRY_DSN }}
+            ${{ matrix.image_type == 'comet' && format('SENTRY_DSN={0}', secrets.OPIK_FE_SENTRY_DSN) }}
           secrets: |
             ${{ matrix.image_type == 'comet' && secrets.OPIK_FE_SENTRY_DSN != '' && format('OPIK_FE_SENTRY_DSN={0}', secrets.OPIK_FE_SENTRY_DSN) || '' }}
             GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
