replace bitnami minio, zookeeper  and redis with CloudPirates charts and official images, mysql with custom chart and official image

--- a/deployment/helm_chart/opik/Chart.yaml
+++ b/deployment/helm_chart/opik/Chart.yaml
@@ -30,20 +30,20 @@ appVersion: 1.9.52
 
 dependencies:
 - name: mysql
-  version: "11.1.9"
-  repository: "https://charts.bitnami.com/bitnami"
+  version: "0.1.7"
+  repository: "https://helm.dev.comet.com/"
   condition: mysql.enabled
 - name: zookeeper
-  version: 13.8.3
-  repository: https://charts.bitnami.com/bitnami
+  version: 0.3.2
+  repository: oci://registry-1.docker.io/cloudpirates
   condition: zookeeper.enabled
 - name: redis
-  version: "18.19.2"
-  repository: https://charts.bitnami.com/bitnami
+  version: 0.16.0
+  repository: oci://registry-1.docker.io/cloudpirates
   condition: redis.enabled
 - name: minio
-  version: 15.0.7
-  repository: https://charts.bitnami.com/bitnami
+  version: 0.5.6
+  repository: oci://registry-1.docker.io/cloudpirates
   condition: minio.enabled
 - name: altinity-clickhouse-operator
   version: "0.25.4"
