replace bitnami minio, zookeeper  and redis with CloudPirates charts and official images, mysql with custom chart and official image

--- a/.github/workflows/lint_helm_chart.yaml
+++ b/.github/workflows/lint_helm_chart.yaml
@@ -26,6 +26,7 @@ jobs:
           run: |
               set -e
               cd deployment/helm_chart/opik
+              helm repo add mysql https://comet-ml.github.io/comet-mysql-helm/
               helm repo add bitnami https://charts.bitnami.com/bitnami
               helm repo add clickhouse-operator https://docs.altinity.com/clickhouse-operator
               helm dependency build
