--- a/.github/workflows/publish_helm_chart.yaml
+++ b/.github/workflows/publish_helm_chart.yaml
@@ -23,7 +23,7 @@ jobs:
   publish-helm-chart:
 
     runs-on: ubuntu-latest
-    timeout-minutes: 5
+    timeout-minutes: 15
     steps:
 
         - name: Checkout
@@ -52,6 +52,7 @@ jobs:
           run: |
             set -e
             cd deployment/helm_chart/opik
+            helm repo add mysql https://comet-ml.github.io/comet-mysql-helm/
             helm repo add bitnami https://charts.bitnami.com/bitnami
             helm repo add clickhouse-operator https://docs.altinity.com/clickhouse-operator
             helm dependency build
