--- a/apps/opik-backend/src/test/resources/config-test.yml
+++ b/apps/opik-backend/src/test/resources/config-test.yml
@@ -7,6 +7,7 @@ logging:
   #  Default: com.comet: DEBUG
   #  Description: Individual logger configuration
   loggers:
+    com.clickhouse.client: DEBUG
     com.comet: DEBUG
 
 # Description: state database configuration
@@ -296,6 +297,16 @@ onlineScoring:
       claimIntervalRatio: # Empty - will use global default
       pendingMessageDuration: # Empty - will use global default
       maxRetries: # Empty - will use global default
+    - scorer: span_llm_as_judge
+      streamName: stream_scoring_span_llm_as_judge
+      codec: java
+      # Optional per stream configuration (falls back to global if not specified)
+      poolingInterval: # Empty - will use global default
+      longPollingDuration: # Empty - will use global default
+      consumerBatchSize: # Empty - will use global default
+      claimIntervalRatio: # Empty - will use global default
+      pendingMessageDuration: # Empty - will use global default
+      maxRetries: # Empty - will use global default
 
 # LLM providers client configuration
 llmProviderClient:
@@ -393,6 +404,9 @@ serviceToggles:
   # Default: false
   # Description: Whether or not to enable the trace thread Python evaluator
   traceThreadPythonEvaluatorEnabled: "false"
+  # Default: true
+  # Description: Whether or not to enable the span LLM as Judge evaluator
+  spanLlmAsJudgeEnabled: "false"
   # Default: false
   # Description: Whether or not OpikAI feature is enabled
   opikAIEnabled: "false"
