[OPIK-3308] [P SDK] Test run

--- a/.github/workflows/lib-integration-tests-runner.yml
+++ b/.github/workflows/lib-integration-tests-runner.yml
@@ -47,10 +47,29 @@ env:
   OPIK_SENTRY_ENABLE: False
 
 jobs:
+  has_needed_secrets:
+    name: Check Secrets
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print secrets
+        run: |
+#          echo "result=${{ secrets.OPENAI_API_KEY != '' }}" >> $GITHUB_OUTPUT
+          echo "result=false" >> $GITHUB_OUTPUT
+
+  missed_api_key_warning:
+    name: Check OpenAI API Key
+    runs-on: ubuntu-latest
+    if: ${{ needs.has_needed_secrets.outputs.result == 'false' }}
+    steps:
+      - name: Print disabled message
+        run: |
+          echo "::warning::SDK Library Integration Tests are disabled because OPENAI_API_KEY is not set"
+
   init_environment:
     name: Build
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    if: ${{ needs.has_needed_secrets.outputs.result != 'false' }}
     outputs:
       LIBS: ${{ steps.init.outputs.LIBS }}
 
