--- a/.github/workflows/sdk-e2e-library-tests.yaml
+++ b/.github/workflows/sdk-e2e-library-tests.yaml
@@ -28,13 +28,12 @@ env:
   OPIK_SENTRY_ENABLE: False
   SLACK_WEBHOOK_URL: ${{ secrets.ACTION_MONITORING_SLACK }}
   LIBS: ${{ github.event.inputs.libs != '' && github.event.inputs.libs  || 'all' }}
-  HAS_OPENAI_API_KEY: False  # ${{ secrets.OPENAI_API_KEY != '' }}
 
 jobs:
-  check_api_key:
+  missed_api_key_warning:
     name: Check OpenAI API Key
     runs-on: ubuntu-latest
-    if: ${{ env.HAS_OPENAI_API_KEY == 'false' }}
+    if: ${{ secrets.OPENAI_API_KEY == '' }}
     steps:
       - name: Print disabled message
         run: |
@@ -44,7 +43,7 @@ jobs:
     name: E2E Lib Integration Python ${{matrix.python_version}}
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    if: ${{ env.HAS_OPENAI_API_KEY == 'true' }}
+    if: ${{ secrets.OPENAI_API_KEY != '' }}
     strategy:
       fail-fast: false
       matrix:
