[OPIK-3308] [P SDK] Test run

--- a/.github/workflows/sdk-e2e-library-tests.yaml
+++ b/.github/workflows/sdk-e2e-library-tests.yaml
@@ -30,10 +30,18 @@ env:
   LIBS: ${{ github.event.inputs.libs != '' && github.event.inputs.libs  || 'all' }}
 
 jobs:
+  has_needed_secrets:
+    name: Check Secrets
+    runs-on: ubuntu-latest
+    steps:
+      - name: Print has secrets into output
+        run: |
+          echo "result=${{ secrets.OPENAI_API_KEY != '' }}" >> $GITHUB_OUTPUT
+
   missed_api_key_warning:
     name: Check OpenAI API Key
     runs-on: ubuntu-latest
-    if: ${{ secrets.OPENAI_API_KEY == '' }}
+    if: ${{ needs.has_needed_secrets.outputs.result == 'false' }}
     steps:
       - name: Print disabled message
         run: |
@@ -43,7 +51,7 @@ jobs:
     name: E2E Lib Integration Python ${{matrix.python_version}}
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    if: ${{ secrets.OPENAI_API_KEY != '' }}
+    if: ${{ needs.has_needed_secrets.outputs.result != 'false' }}
     strategy:
       fail-fast: false
       matrix:
