--- a/.github/workflows/lib-integration-tests-runner.yml
+++ b/.github/workflows/lib-integration-tests-runner.yml
@@ -51,15 +51,18 @@ jobs:
   has_needed_secrets:
     name: Check Secrets
     runs-on: ubuntu-latest
+    outputs:
+      has_secrets: ${{ steps.init.outputs.has_secrets }}
     steps:
-      - name: Print secrets
+      - name: Print has secrets into output
+        id: init
         run: |
-          echo "result='false'" >> $GITHUB_OUTPUT
+          echo "has_secrets=${{ secrets.OPENAI_API_KEY != '' }}" >> $GITHUB_OUTPUT
 
   missed_api_key_warning:
     name: Check OpenAI API Key
     runs-on: ubuntu-latest
-    if: ${{ needs.has_needed_secrets.outputs.result == 'false' }}
+    if: ${{ needs.has_needed_secrets.outputs.has_secrets == 'false' }}
     steps:
       - name: Print disabled message
         run: |
@@ -69,7 +72,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    if: ${{ needs.has_needed_secrets.outputs.result != 'false' }}
+    if: ${{ needs.has_needed_secrets.outputs.has_secrets != 'false' }}
     outputs:
       LIBS: ${{ steps.init.outputs.LIBS }}
 
