--- a/.github/workflows/lib-integration-tests-runner.yml
+++ b/.github/workflows/lib-integration-tests-runner.yml
@@ -60,7 +60,7 @@ jobs:
           echo "has_secrets=${{ secrets.OPENAI_API_KEY != '' }}" >> $GITHUB_OUTPUT
 
   missed_api_key_warning:
-    name: Check OpenAI API Key
+    name: Missed OpenAI API Key Warning
     runs-on: ubuntu-latest
     if: ${{ needs.has_needed_secrets.outputs.has_secrets == 'false' }}
     steps:
