--- a/.github/workflows/sdk-e2e-library-tests.yaml
+++ b/.github/workflows/sdk-e2e-library-tests.yaml
@@ -1,6 +1,8 @@
 # The workflow to run tests for third-party libraries integrations that require OPIK server running
 #
 name: SDK E2E Libraries Integration Tests
+permissions:
+  contents: read
 run-name: "SDK E2E Libraries Integration Tests ${{ github.ref_name }} by @${{ github.actor }}"
 on:
     workflow_dispatch:
@@ -42,7 +44,7 @@ jobs:
           echo "has_secrets=${{ secrets.OPENAI_API_KEY != '' }}" >> $GITHUB_OUTPUT
 
   missed_api_key_warning:
-    name: Check OpenAI API Key
+    name: Missed OpenAI API Key Warning
     runs-on: ubuntu-latest
     if: ${{ needs.has_needed_secrets.outputs.has_secrets == 'false' }}
     steps:
