[OPIK-3308] Implement skipping of library integration tests if specific credentials are not provided (#4263)
* [OPIK-3308] [P SDK] Add session-wide package skip for integration tests based on OpenAI API key presence

- Introduced `skip_all_tests_in_package` session fixture to skip test packages when no OpenAI credentials are found.
- Added `should_skip_package` utility to validate OpenAI API key availability.
- Applied changes to library and E2E integration test configurations.

* [OPIK-3308] [P SDK] Refactor library integration test skip condition

- Replaced `should_skip_package` with `should_skip_library_integration_tests` for consistency and reuse.
- Centralized logic to check for OpenAI API key availability in `environment.py`.
- Updated fixtures in library and E2E integration test configurations to use the new method.

* [OPIK-3308] [P SDK] Add OpenAI API Key validation in SDK E2E library tests workflow.

- Introduced `check_api_key` job to print a warning.
- Updated `run_e2e_lib_integration` job to conditionally execute based on API key availability.

* [OPIK-3308] [P SDK] Test run

* [OPIK-3308] [P SDK] Test run

* [OPIK-3308] [P SDK] Test run

* Update sdk-e2e-library-tests.yaml

* [OPIK-3308] [P SDK] Test run

* [OPIK-3308] [P SDK] Test run

* [OPIK-3308] [P SDK] Removed obsolete skip all tests fixtures

* [OPIK-3308] [P SDK] Rename API key warning steps in workflows for clarity. Added permissions.

--- a/.github/workflows/sdk-e2e-library-tests.yaml
+++ b/.github/workflows/sdk-e2e-library-tests.yaml
@@ -1,6 +1,8 @@
 # The workflow to run tests for third-party libraries integrations that require OPIK server running
 #
 name: SDK E2E Libraries Integration Tests
+permissions:
+  contents: read
 run-name: "SDK E2E Libraries Integration Tests ${{ github.ref_name }} by @${{ github.actor }}"
 on:
     workflow_dispatch:
@@ -30,10 +32,31 @@ env:
   LIBS: ${{ github.event.inputs.libs != '' && github.event.inputs.libs  || 'all' }}
 
 jobs:
+  has_needed_secrets:
+    name: Check Secrets
+    runs-on: ubuntu-latest
+    outputs:
+        has_secrets: ${{ steps.init.outputs.has_secrets }}
+    steps:
+      - name: Print has secrets into output
+        id: init
+        run: |
+          echo "has_secrets=${{ secrets.OPENAI_API_KEY != '' }}" >> $GITHUB_OUTPUT
+
+  missed_api_key_warning:
+    name: Missed OpenAI API Key Warning
+    runs-on: ubuntu-latest
+    if: ${{ needs.has_needed_secrets.outputs.has_secrets == 'false' }}
+    steps:
+      - name: Print disabled message
+        run: |
+          echo "::warning::SDK E2E Libraries Integration Tests workflow is disabled because OPENAI_API_KEY is not set"
+
   run_e2e_lib_integration:
     name: E2E Lib Integration Python ${{matrix.python_version}}
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    if: ${{ needs.has_needed_secrets.outputs.has_secrets != 'false' }}
     strategy:
       fail-fast: false
       matrix:
