--- a/.github/workflows/sdk-e2e-library-tests.yaml
+++ b/.github/workflows/sdk-e2e-library-tests.yaml
@@ -56,7 +56,7 @@ jobs:
     name: E2E Lib Integration Python ${{matrix.python_version}}
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    if: ${{ needs.has_needed_secrets.outputs.has_secrets != 'false' }}
+    if: ${{ needs.has_needed_secrets.outputs.has_secrets != 'true' }}
     strategy:
       fail-fast: false
       matrix:
