--- a/.github/workflows/sdk-e2e-library-tests.yaml
+++ b/.github/workflows/sdk-e2e-library-tests.yaml
@@ -45,6 +45,7 @@ jobs:
 
   missed_api_key_warning:
     name: Missed OpenAI API Key Warning
+    needs: [has_needed_secrets]
     runs-on: ubuntu-latest
     if: ${{ needs.has_needed_secrets.outputs.has_secrets == 'false' }}
     steps:
@@ -54,6 +55,7 @@ jobs:
 
   run_e2e_lib_integration:
     name: E2E Lib Integration Python ${{matrix.python_version}}
+    needs: [has_needed_secrets]
     runs-on: ubuntu-latest
     timeout-minutes: 30
     if: ${{ needs.has_needed_secrets.outputs.has_secrets != 'true' }}
