[OPIK-3308] Fix SDK E2E and library integration workflows to properly check `has_needed_secrets` condition

--- a/.github/workflows/lib-integration-tests-runner.yml
+++ b/.github/workflows/lib-integration-tests-runner.yml
@@ -74,7 +74,7 @@ jobs:
     needs: [has_needed_secrets]
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    if: ${{ needs.has_needed_secrets.outputs.has_secrets != 'false' }}
+    if: ${{ needs.has_needed_secrets.outputs.has_secrets == 'true' }}
     outputs:
       LIBS: ${{ steps.init.outputs.LIBS }}
 
