--- a/.github/workflows/lib-integration-tests-runner.yml
+++ b/.github/workflows/lib-integration-tests-runner.yml
@@ -61,6 +61,7 @@ jobs:
 
   missed_api_key_warning:
     name: Missed OpenAI API Key Warning
+    needs: [has_needed_secrets]
     runs-on: ubuntu-latest
     if: ${{ needs.has_needed_secrets.outputs.has_secrets == 'false' }}
     steps:
@@ -70,9 +71,10 @@ jobs:
 
   init_environment:
     name: Build
+    needs: [has_needed_secrets]
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    if: ${{ needs.has_needed_secrets.outputs.has_secrets != 'false' }}
+    if: ${{ needs.has_needed_secrets.outputs.has_secrets == 'true' }}
     outputs:
       LIBS: ${{ steps.init.outputs.LIBS }}
 
