Revision 3: Add optional ExternalSecrets support for LLM API keys
Add Helm chart support for injecting secrets via Kubernetes SecretRefs.
This provides 3 flexible options for configuring LLM API keys:

1. Local development: Environment variables (simple, quick setup)
2. Docker Compose: Override file (persistent, git-ignored)
3. Kubernetes: ExternalSecret/manual secrets (production-ready)

Changes:
- Helm: Add optional secretRefs to python-backend in values.yaml
- Helm: Update deployment.yaml to render secretRefs as envFrom entries
- Docs: Comprehensive guide for all 3 configuration methods
- Docs: Validation guide for Helm template rendering

Benefits:
- Optional and backward compatible (secretRefs: [] by default)
- Works with ExternalSecret Operator (AWS/GCP/Azure)
- Supports multiple secrets for better organization
- No secrets in Helm values or Git
- Automatic secret rotation with ExternalSecret Operator

Security:
- Secrets stored in external secret managers (AWS Secrets Manager, etc.)
- RBAC-controlled access
- Audit logs for secret access
- Encrypted at rest with cloud KMS

--- a/deployment/helm_chart/opik/templates/deployment.yaml
+++ b/deployment/helm_chart/opik/templates/deployment.yaml
@@ -194,6 +194,14 @@ spec:
           envFrom:
             {{- toYaml . | nindent 10 }}
           {{- end }}
+          {{- if $value.secretRefs }}
+          {{- range $value.secretRefs }}
+          {{- if .name }}
+            - secretRef:
+                name: {{ .name }}
+          {{- end }}
+          {{- end }}
+          {{- end }}
           volumeMounts:
           {{- if and $value.usesJavaTrustStore (or $.Values.caCerts.additionalCACerts $.Values.caCerts.existingAdditionalCACertsRef $.Values.caCerts.overwriteJavaCATrustStore.enabled) }}
             - name: {{ ternary $.Values.caCerts.overwriteJavaCATrustStore.volume.name "ca-trust-store" $.Values.caCerts.overwriteJavaCATrustStore.enabled }}
