--- a/deployment/helm_chart/opik/values.yaml
+++ b/deployment/helm_chart/opik/values.yaml
@@ -189,6 +189,28 @@ component:
       OTEL_PROPAGATORS: "tracecontext,baggage"
       OTEL_EXPERIMENTAL_EXPORTER_OTLP_RETRY_ENABLED: true
       OTEL_EXPORTER_OTLP_METRICS_TEMPORALITY_PREFERENCE: cumulative
+    
+    # Optional: Reference external Kubernetes secrets for sensitive configuration
+    # Use this to inject LLM API keys (OPENAI_API_KEY, ANTHROPIC_API_KEY, etc.)
+    # from external secret managers (AWS Secrets Manager, GCP Secret Manager, Azure Key Vault)
+    # 
+    # Customers can create secrets using:
+    # - ExternalSecret Operator (recommended for production)
+    # - Kubernetes Secrets CSI Driver
+    # - Manual kubectl create secret
+    # 
+    # Each secretRef will be added as an envFrom entry, making all key-value pairs
+    # from the secret available as environment variables in the python-backend pod.
+    # 
+    # Example configuration:
+    # secretRefs:
+    #   - name: "opik-llm-api-keys"       # Contains OPENAI_API_KEY, ANTHROPIC_API_KEY, etc.
+    #   - name: "opik-aws-credentials"    # Contains AWS_ACCESS_KEY_ID, AWS_SECRET_ACCESS_KEY
+    # 
+    # For detailed setup instructions, see:
+    # apps/opik-python-backend/docs/LLM_API_KEYS_CONFIGURATION.md
+    secretRefs: []
+    
     envFrom:
       - configMapRef:
           name: opik-python-backend
