--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -4,7 +4,11 @@ Frontend:
 
 Backend:
   - changed-files:
-    - any-glob-to-any-file: 'apps/opik-backend/**/*'
+    - any-glob-to-any-file: 
+      - 'apps/opik-backend/**/*'
+      - 'apps/opik-guardrails-backend/**/*'
+      - 'apps/opik-python-backend/**/*'
+      - 'apps/opik-sandbox-executor-python/**/*'
 
 Python SDK:
   - changed-files:
@@ -14,19 +18,64 @@ TypeScript SDK:
   - changed-files:
     - any-glob-to-any-file: 'sdks/typescript/**/*'
 
+Optimizer SDK:
+  - changed-files:
+    - any-glob-to-any-file: 'sdks/opik_optimizer/**/*'
+
+python:
+  - changed-files:
+    - any-glob-to-any-file: '**/*.py'
+
+java:
+  - changed-files:
+    - any-glob-to-any-file: '**/*.java'
+
+typescript:
+  - changed-files:
+    - any-glob-to-any-file: 
+      - '**/*.ts'
+      - '**/*.tsx'
+
+tests:
+  - changed-files:
+    - any-glob-to-any-file:
+      - 'apps/opik-backend/src/test/**/*'
+      - 'apps/opik-guardrails-backend/tests/**/*'
+      - 'apps/opik-python-backend/tests/**/*'
+      - 'apps/opik-frontend/e2e/**/*'
+      - 'sdks/python/tests/**/*'
+      - 'sdks/opik_optimizer/tests/**/*'
+      - 'sdks/typescript/tests/**/*'
+      - 'tests_end_to_end/**/*'
+      - 'tests_load/**/*'
+
+dependencies:
+  - changed-files:
+    - any-glob-to-any-file:
+      - '**/pom.xml'
+      - '**/package.json'
+      - '**/package-lock.json'
+      - '**/requirements.txt'
+      - '**/pyproject.toml'
+      - '**/setup.py'
+      - '**/.python-version'
+      - '**/.java-version'
+
 Infrastructure:
   - changed-files:
     - any-glob-to-any-file:
       - '.github/**/*'
+      - '.hooks/**/*'
       - 'deployment/**/*'
       - 'scripts/**/*'
       - 'extensions/**/*'
-      - '*.sh'
-      - '*.ps1'
+      - '**/*.sh'
+      - '**/*.ps1'
 
 documentation:
   - changed-files:
     - any-glob-to-any-file:
       - 'apps/opik-documentation/**/*'
+      - '**/*.mdc'
       - '**/*.md'
       - '**/*.mdx'
